# CMakeTemplate

./: CMakeLists.txt  README.md
Application/: CMakeLists.txt
Application/Inc/: app.h
Application/Src/: app.c  main.c
Drivers/: CMakeLists.txt
Drivers/Inc/: driver.h
Drivers/Src/: driver.c
OS/: CMakeLists.txt
OS/Inc/: os.h
OS/Src/: os.c
